verification weightings as separate columns, null checks